src/app/components/dropdownjogos/dropdownjogos.component.css
:root {
  --blue-light: #00aeff;
}

svg {
  fill: var(--blue-light);
  opacity: 0.6;
}

.dropdown.bigscreen {
  background-color: rgba(173, 216, 230, 0.671);
  position: absolute;
  padding-top: 100px;
  width: 100%;
}

.dropdown {
  position: relative;
  background: linear-gradient(
    25deg,
    rgba(2, 2, 3, 1) 20%,
    rgba(14, 17, 23, 1) 55%
  );
  width: 100vw;
  z-index: 30;
  left: 0;
  right: 0;
  top: 0;
}

section {
  position: relative;
  top: 100;
  left: 0;
  right: 0;
  margin: auto;
  flex-direction: column;
  justify-content: space-between;
  padding: 30px 80px;
  max-width: 1216px;
}

.grid {
  justify-content: space-between;
  grid-template-columns: repeat(auto-fit, minmax(176px, 1fr));
}

.grid > * {
  padding: 30px;
  align-items: center;
  flex-direction: column;
  margin: 3px;
  text-align: center;
}

.grid * img {
  width: 70px;
}

.grid * p {
  font-size: 14px;
  color: rgb(160, 160, 160);
}

.sub-bar {
  z-index: 23;
  gap: 20px;
  background: #15171b;
  margin: auto;
  justify-content: center;
  padding: 20px;
}

.sub-bar > * {
  gap: 8px;
  font-weight: 600;
  font-size: 14px;
  align-items: center;
}

@media screen and (max-width: 680px) {
  .sub-bar {
    flex-direction: column;
    align-items: center;
  }

  .grid > * {
    padding: 15px 7px;
  }

  .grid {
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  }

  .container {
    padding: 0 30px 30px;
  }
}

@media screen and (max-width: 1020px) {
  .dropdown {
    margin: 0 -50px;
    padding: 0;
    margin-top: var(--padding-top);
    z-index: 990;
  }

  section {
    padding: 0;
    margin: 0;
    margin-top: -30px;
  }

  .sub-bar {
    margin-left: -50px;
  }
}

